--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           command: "docker build -t gxwilkerson/docker-react -f Dockerfile.dev ."
       - run:
           name: "run tests"
-          command: "docker run gxwilkerson/docker-react npm run test -- --coverage"
+          command: "docker run -e CI=true gxwilkerson/docker-react npm run test -- --coverage"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
